mejora estadisticas, funcionalidad agregada en reportar